compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_seq_escapes-21.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"\\1011\""

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..12): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..12): []
        Assign@(FileId(1), 0..12)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..12): String("A1")

