compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_seq_escapes-26.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"\\x20Ar\""

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..13): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..13): []
        Assign@(FileId(1), 0..13): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..13): String(" Ar")

